added menu, added click to gridview currently pointint to all_stream, added search page, mostly functional.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".AllStream"></activity>
+        <activity android:name=".AllStream" />
+        <activity
+            android:name=".SearchStream"
+            android:label="@string/title_activity_search_stream"
+            android:theme="@style/AppTheme"></activity>
     </application>
 
 </manifest>
