added nearby pictures stuff

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,8 @@
         <activity
             android:name=".SearchStream"
             android:label="@string/title_activity_search_stream"
-            android:theme="@style/AppTheme"></activity>
+            android:theme="@style/AppTheme" />
+        <activity android:name=".NearbyPictures"></activity>
     </application>
 
 </manifest>
