integrated to single strema view, though no pictures were shown, added link to nearby_stream

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,7 @@
             android:label="@string/title_activity_search_stream"
             android:theme="@style/AppTheme" />
         <activity android:name=".NearbyPictures"></activity>
+        <activity android:name=".ViewStream"></activity>
     </application>
 
 </manifest>
