--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,7 @@
         <activity android:name=".Camera"></activity>
         <activity android:name=".NearbyPictures"></activity>
         <activity android:name=".ViewStream"></activity>
+        <activity android:name="UploadImage"></activity>
     </application>
 
 </manifest>
